fix image shape on mobile

--- a/style.css
+++ b/style.css
@@ -439,7 +439,7 @@ p>a:hover {
         margin-left: 10%;
         margin-right: 10%;
         width: 80%;
-        border-radius: 50%;
+        border-radius: 10%;
     }
 }
 
